--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -21,6 +22,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "jsdom": "^20.0.1",
+    "msw": "^0.47.4",
     "typescript": "^4.6.3",
     "vite": "^2.9.15",
     "vitest": "^0.24.0"
